1.16.5 compatibility changes